--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "COC473"]
 	path = COC473
-	url = ./COC473
+	url = https://github.com/pedromxavier/COC473
 [submodule "COS360"]
 	path = COS360
-	url = ./COS360
+	url = https://github.com/pedromxavier/COS360
 [submodule "EEL882"]
 	path = EEL882
-	url = ./EEL882
+	url = https://github.com/pedromxavier/EEL882
