--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "EEL882"]
 	path = EEL882
 	url = ./EEL882
+[submodule "EEL816"]
+	path = EEL816
+	url = https://github.com/pedromxavier/EEL816
