--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "MAA355"]
 	path = MAA355
 	url = https://github.com/pedromxavier/MAA355
+[submodule "FCA218"]
+	path = FCA218
+	url = ./FCA218
